Forbedringer på trege tester. Nå noe raskere, fortsatt ikke raske...